Enhance documentation and improve user management in the library system
- Add detailed Javadoc comments to classes: Dosen, Mahasiswa, Person, Buku, Manager, and Authentikasi.
- Update user data in users.txt with new entries for Dosen and Mahasiswa.
- Refactor methods in Manager for better clarity and maintainability.
- Improve error handling and logging in user authentication and data loading processes.